--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expoapp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -20,11 +20,11 @@
     "firebase": "^9.23.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-gesture-handler": "^2.12.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-modal-datetime-picker": "15.0.1",
-    "react-native-reanimated": "^3.3.0",
-    "react-native-safe-area-context": "^4.6.4",
-    "react-native-screens": "^3.22.0"
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
